// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses summary with one expense 1`] = `
<div>
  <h2>
    Viewing
     
    1 expense
     
    totalling 
    $2.35
  </h2>
</div>
`;

exports[`Should render Expenses summary with two expense 1`] = `
<div>
  <h2>
    Viewing
     
    2 expenses
     
    totalling 
    $6.52
  </h2>
</div>
`;
